  * bug fix: the CLASS-PROTOTYPE of the GENERIC-FUNCTION class is now
    printable.  (reported by Eric Marsden)
  * bug fix in sb-posix: mmap() now works on systems with a 64-bit
    off_t, including Darwin and FreeBSD.  (thanks to Andreas Fuchs)
  * x86 bug fix in control stack exhaustion checking: now shows backtrace
  * bug fix in WITH-TIMEOUT: now the body can have more than one form.
    (thanks to Stig Sandoe)
  * new optimization: inside a named function any reference to a
    function with the same name is considered to be a self-reference;
    this behaviour is controlled with SB-C::RECOGNIZE-SELF-CALLS
    optimization quality.
  * new optimization on x86: logical functions and + now have
    optimized (UNSIGNED-BYTE 32) versions, which are automatically
    used when the result is truncated to 32 bits.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** The system now obeys the constraint imposed by
       UPGRADED-ARRAY-ELEMENT-TYPE that the upgraded array element
       types form a lattice under type intersection.
    ** FFLOOR, FTRUNCATE, FCEILING and FROUND work with integers.
    ** ASSOC now ignores NIL elements in an alist.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.